# wizard-of-wors

./: pyproject.toml
scripts/benchmarks/: agent_performance_comparison.py  benchmark_wizard_ppo_object_eta.py  ppo_agent.py  run_report_wizard.sh  run_report_wizard_of_wor.sh  run_wizard_ppo_pixel_full_and_record.sh  train_jaxatari_agent.py  wizard_report.py
src/jaxatari/: core.py
src/jaxatari/games/: jax_wizardofwor.py
tests/__snapshots__/: test_regression.ambr
