[project]
name = "jaxatari"
version = "0.1.0"
description = "GPU-accelerated, object-centric Atari environments for reinforcement learning with JAX."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "absl-py>=2.3,<3",
    "ale-py==0.11.1",
    "chex==0.1.87",
    "flax==0.10.6",
    "gymnasium==1.2.0",
    "gymnax==0.0.8",
    "jax==0.6.0",
    "ml-dtypes==0.5.1",
    "numpy>=1.26,<2.0",
    "opt-einsum==3.4.0",
    "scipy==1.15.3",
    "toolz==1.0.0",
    "typing-extensions>=4.14,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
benchmarks = [
  "absl-py>=2.3,<3",
  "ale-py==0.11.1",
  "chex==0.1.87",
  "distrax==0.1.5",
  "gymnax==0.0.8",
  "gymnasium==1.2.0",
  "hydra-core>=1.3,<2",
  "imageio>=2.34,<3",
  "jinja2>=3.1,<4",
  "ml-dtypes==0.5.1",
  "matplotlib>=3.8,<4",
  "numpy>=1.26,<2.0",
  "ocatari>=2.2,<3",
  "opencv-python>=4.10,<5",
  "omegaconf>=2.3,<3",
  "opt-einsum==3.4.0",
  "optax==0.2.5",
  "pandas>=2.2,<3",
  "pillow>=10.3,<11",
  "psutil>=5.9,<6",
  "pygame>=2.5,<3",
  "safetensors>=0.4,<1",
  "scipy==1.15.3",
  "tensorflow-probability==0.25.0",
  "tqdm>=4.66,<5",
  "toolz==1.0.0",
  "typing-extensions>=4.14,<5",
  "wandb>=0.19,<1",
]
dev = [
  "pytest",
  "pygame==2.5.0",
  "gymnasium[other]==1.2.0",
  "syrupy==4.9.1",
]
gh_ci = [
  "pygame==2.5.0",
  "opencv-python-headless",
  "pytest",
  "pytest-sugar",
  "pytest-github-actions-annotate-failures",
  "syrupy==4.9.1",
]
